<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Helper.AudioHelperActivity">

    <Button
        android:id="@+id/startRecordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stopRecordBtn"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/start_recording"
        android:padding="5dp"
        android:onClick="startRecording"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/stopRecordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/stop_recording"
        android:padding="5dp"
        android:onClick="stopRecording"
        android:textAllCaps="false"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@id/startRecordBtn"/>

    <TextView
        android:id="@+id/txtForOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtForSpecs"
        android:padding="5dp"
        android:text="@string/output"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txtForSpecs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForOutput"
        app:layout_constraintBottom_toTopOf="@id/startRecordBtn"
        android:text="@string/specs"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>